# Kame-Engine

./: .gitignore  .gitmodules  Kame Engine.drawio
KameEngine/KameEngine/: CMakeLists.txt  KameEngine.cpp  KameEngine.vcxproj  KameEngine.vcxproj.filters  frag.spv  runCompiler.bat
KameEngine/KameEngine/Debug/: vc142.idb
KameEngine/KameEngine/Debug/KameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KameEngine.lastbuildstate
KameEngine/KameEngine/src/: DepthImage.h  EasyImage.h  KameEngine.h  Mesh.h  MeshHelper.h  Pipeline.h  Vertex.h  VulkanUtils.h  kmpch.h  old.cpp  old.h  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
KameEngine/KameEngine/src/Kame/: Engine.cpp  Engine.h  Kame.h
KameEngine/KameEngine/src/Kame/Application/: Application.cpp  Application.h  Entrypoint.h  FileSystem.cpp  FileSystem.h  Platform.cpp  Platform.h  Window.cpp  Window.h
KameEngine/KameEngine/src/Kame/Application/glfw/: GlfwPlatform.cpp  GlfwPlatform.h  GlfwWindow.cpp  GlfwWindow.h
KameEngine/KameEngine/src/Kame/Core/: DebugUtils.h  References.h
KameEngine/KameEngine/src/Kame/Game/: Game.cpp  Game.h
KameEngine/KameEngine/src/Kame/Graphics/GraphicsApi/: GraphicsApi.cpp  GraphicsApi.h  Surface.h
KameEngine/KameEngine/src/Kame/Graphics/GraphicsApi/Vulkan/: Instance.h  (+20 more)
KameEngine/KameEngine/src/Kame/Logging/: Log.cpp  Log.h
KameEngine/KameEngine/x64/Debug/: vc142.idb
KameEngine/KameEngine/x64/Debug/KameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+31 files in other folders)
